parte de fol incluida

--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -638,6 +638,7 @@ Para poner en marcha la base de datos en el servidor, primero hemos instalado do
   \end{lstlisting}
 }
 \subsection{FOL: Riesgos Laborales}
+\input{Fol/FolDoc}
 \subsection{Inglés}
 \subsection{Consideraciones}
 \subsection{Bibliografía}
