Corregido apartado fol

--- a/DocTaller/Fol/FolDoc.tex
+++ b/DocTaller/Fol/FolDoc.tex
@@ -15,7 +15,8 @@ El puesto de trabajo de un desarrollador suele tener los siguientes elementos:
     \item Monitor(es)
 \end{itemize}
 Todo esto suele estar ubicado en un espacio de oficina, o en casa en el caso de ser un
-trabajo realizado en remoto en casa.
+trabajo realizado en remoto en casa. Para evitar al máximo los riesgos laborales, deberemos 
+tener en cuenta todos los elementos citados y diferentes factores ambientales como la temperatura o la iluminación.
 
 \begin{figure}[H]
     \centering
@@ -36,7 +37,7 @@ En la siguiente imagen mostramos los riesgos más habituales en nuestro trabajo:
 
 \subsubsection{Evaluación de riesgos}
 Para evaluar el nivel de riesgo que suponen los anteriores riesgos, se tiene en cuenta la probabilidad de que suceda
-y las consecuencias del mismo. Basandonos en las pautas otorgadas por el \href{https://www.insst.es/documents/94886/96076/Evaluacion_riesgos.pdf/1371c8cb-7321-48c0-880b-611f6f380c1d?t=1526651610041}{INSST},
+y las consecuencias del mismo. Basandonos en las pautas otorgadas por el \href{https://www.insst.es/documents/94886/96076/Evaluacion_riesgos.pdf/1371c8cb-7321-48c0-880b-611f6f380c1d?t=1526651610041}{\color{red}{INSST}},
 hemos evaluado los riesgos de la siguiente manera: \\
 \begin{itemize}
     \item Riesgo Nº1: Trastornos musculoesqueléticos: \begin{itemize}
@@ -55,11 +56,16 @@ hemos evaluado los riesgos de la siguiente manera: \\
               \item Evaluación: Riesgo trivial
           \end{itemize}
     \item Riesgo Nº4: Carga mental o estrés: \begin{itemize}
-              \item Probabilidad: Media
+              \item Probabilidad: Alta
               \item Consecuencias: Ligeramente dañino - Extremadamente dañino
               \item Evaluación: Riesgo importante
           \end{itemize}
-    \item Riesgo Nº5: Incendio: \begin{itemize}
+    \item Riesgo Nº5: Contacto eléctrico: \begin{itemize}
+            \item Probabilidad: Baja
+            \item Consecuencias: Extremadamente dañino
+            \item Evaluación: Riesgo moderado
+        \end{itemize}
+    \item Riesgo Nº6: Incendio: \begin{itemize}
               \item Probabilidad: Baja
               \item Consecuencias: Extremadamente dañino
               \item Evaluación: Riesgo moderado
@@ -96,12 +102,17 @@ huella entre 23-36cm y una contrahuella entre 13-20cm.
     \caption*{\href{http://www.instaladoresonline.com/cintas_antideslizantes_safety_walk.html}{Fuente: https://www.instaladoresonline.com/}}
 \end{figure}
 \paragraph*{Riesgo Nº4}
+Para evitar el estrés y una carga mental excesiva, es importante distribuir bien el trabajo 
+y establecer plazos realistas. Además de ello, es importante fomentar un buen ambiente laboral para
+evitar que en posibles fases de carga alta el estrés se agrave. \\ 
+Y lo más importante, es primordial establecer y respetar periodos de descanso legales y necesarios. 
+\paragraph*{Riesgo Nº5}
 Para evitar contactos eléctricos, debemos tener todos los ordenadores en óptimas
 condiciones. Un chasis en mal estado podría conducir la corriente y provocar
 calambres. Además de ello, deberíamos minimizar la necesidad de los empleados de
 andar enchufando y desenchufando aparatos, aportándoles un espacio de trabajo
 propio estático.
-\paragraph*{Riesgo Nº5}
+\paragraph*{Riesgo Nº6}
 Como en todos los edificios, para evitar los incendios es importante que todo el
 cableado eléctrico (y ordenadores) esté en buenas condiciones, además de tener
 extintores colocados en los pasillos y habitaciones.
