--- a/DocTaller/Fol/FolDoc.tex
+++ b/DocTaller/Fol/FolDoc.tex
@@ -58,7 +58,7 @@ hemos evaluado los riesgos de la siguiente manera: \\
     \item Riesgo Nº4: Carga mental o estrés: \begin{itemize}
               \item Probabilidad: Alta
               \item Consecuencias: Ligeramente dañino - Extremadamente dañino
-              \item Evaluación: Riesgo importante
+              \item Evaluación: Riesgo importante/Riesgo intolerable
           \end{itemize}
     \item Riesgo Nº5: Contacto eléctrico: \begin{itemize}
             \item Probabilidad: Baja
