Añadidas cosas de bibliografía

--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -681,5 +681,11 @@ Para poner en marcha la base de datos en el servidor, primero hemos instalado do
 \subsection{Inglés}
 \subsection{Consideraciones}
 \subsection{Bibliografía}
-
+\begin{enumerate}
+  \item \href{https://docs.oracle.com/en/java/javase/18/docs/api/index.html}{API Java}
+  \item \href{https://docs.spring.io/spring-framework/docs/current/javadoc-api/}{API Spring}
+  \item \href{https://www.w3schools.com/xml/ajax_applications.asp}{w3schools XML Applications}
+  \item \href{https://www.youtube.com/watch?v=vtPkZShrvXQ}{freeCodeCamp.org}
+  \item \href{https://es.overleaf.com/learn}{Documentación LaTex}
+\end{enumerate}
 \end{document}
