--- a/DocTaller/Fol/FolDoc.tex
+++ b/DocTaller/Fol/FolDoc.tex
@@ -85,6 +85,15 @@ silla debería ser regulable y disponer de apoyo lumbar.
     \caption{Ejemplo silla ergonómica}
     \caption*{\href{https://www.hermanmiller.com/es_mx/products/seating/office-chairs/aeron-chairs/}{Fuente: Herman Miller}}
 \end{figure}
+
+Los expertos en ergonomía suelen recomendar adoptar la siguiente postura a la hora de trabajar en un puesto como el nuestro:
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1.0\textwidth]{Fol/posturaCorrecta.png}
+    \caption{Postura correcta para trabajar con un ordenador}
+\end{figure}
+
 \paragraph*{Riesgo Nº2}
 Para reducir el riesgo de fatiga visual, es importante tener una iluminación
 homogénea del espacio de trabajo, además de un monitor calibrado y a una distancia
