ingles añadido, falta rematar

--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -679,6 +679,47 @@ Para poner en marcha la base de datos en el servidor, primero hemos instalado do
 \subsection{FOL: Riesgos Laborales}
 \input{Fol/FolDoc}
 \subsection{Inglés}
+\subsubsection{Early Stage}
+Welcome to our Web Application, this summary will talk about the early stage of our project, what we have to do and what we are going to do. This time we have to create a java application for a Mechanical workshop and its own web page.This is the final project which includes several different disciplines that we learned during this programming course. We are going to develop as much as we can, implementing all our new knowledge. Hope you enjoy it.
+\\
+Gutierrez Brothers workshop.
+\\
+First of all, talk about the topic that we have to implement. This is about a mechanical workshop.
+A program for a mechanical workshop has to include all about the registration of new clientes, a good way to keep safe information and give good access to it, like: be able to identify workers and clients,be able to identify clients' cars or be able to keep all this information safe . All of these questions make us realize that the first step is to create a good database. After that we will develop the program to give access in a simple and functional way to the workers, because they are going to be who work with it.
+Obviously we can´t reach all the functionalities that a professional application needs, so we have decided don´t implement financial options and focus on repairs management.
+On the other hand, we had to implement a web page about this topic, and we decided to do a basic one, with  informative and contact uses. However our page is going to be connected to our database, to obtain information from it.
+
+\subsubsection{Abstract}
+This project joins all different knowledge from this programming course. We had to implement an application for a mechanic workshop and make its own web page.
+Furthermore an important part of this project is to write all the documentation about it.
+We have created a web page for Hermanos Rodriguez workshop, and a java application to repair management. Underneath, a basic and functional database is working, one that helps us to manage all the required information. Finally we used a Spring framework for developing a java connection with our database.
+\\
+In my opinion, the first purpose of this project was to learn, putting on practice, uses of the knowledge studied during this course. It has been a little approach to the professional world, merging into one big job, all our subjects.  
+\\
+To make it happen, we first researched other mechanic workshops, to make the web page, we planned the structure and its parts. We decided to make a backend to show products. Anyway our web page is only informative and to contact, because it is impossible to reach a professional project, without time.  About the database, we decided what information we would want to use, we created users, and restrictions, we filled it with fake information, basically we created the whole script. That's why without a good database the rest doesn't matter.
+\\
+Programming has two different parts, application and connection between database and web page. 
+\\
+As a result, we have obtained a useful informative and contact web page, and as i said, with an implementation of a backend to our database.
+We developed a programming aplicacion focused on repairs management. Anyway, we imagine other use cases, but we did not implement them due we had to put the limit in some place.
+\\
+Maybe it looks like we forgot about  the rest of the subject, but as I said this project has an important documentation part, and in my opinion English, FOL or Informatic Systems are more about writing than making. However we have completed all requests.
+FOL´s part has been made by Martín, and he has exposed hazards and risks from a mechanic workshop, keeping safe to workers.
+\\
+Obviously all of this information in english is about english class.
+Finally the part of informatic systems, is where we explain the design of our mechanic workshop. How many computers they are going to need, what kind of computers, with what kind of hardware and software, which kind of operating sistem. Internet which we are going to contract and of course different illustrations.
+\\
+In conclusion, I believe that has been a difficult project, very useful, where we could learn lots of new things, and put it into practice.
+\\
+\subsubsection{Bibliography}
+    \item \href{https://www.linguee.es/}{Linguee}
+    \item \href{https://docs.oracle.com/javase/7/docs/api/}{API Java}
+    \item \href{https://www.w3schools.com/}{W3School}{HTML, CSS, SQL...}
+    \item \href{https://www.youtube.com/watch?v=9SGDpanrc8U&ab_channel=Amigoscode}{Spring Framework}
+    \item \href{https://www.youtube.com/watch?v=vtPkZShrvXQ&ab_channel=freeCodeCamp.org}{Spring Framework}
+    \item \href{https://www.baeldung.com/spring-boot-app-as-a-service}{Spring info}
+    \item \href{https://www.freecodecamp.org/}{Spring info}
+    \item \href{https://github.com/}{GitHub}
 \subsection{Consideraciones}
 \subsection{Bibliografía}
 \begin{enumerate}
